--- a/client/payment/payer/funding_instruments/credit_card/amount.html
+++ b/client/payment/payer/funding_instruments/credit_card/amount.html
@@ -1,5 +1,5 @@
 <template name="smaltPayPalCreditCardFormAmount">
-    <span class="total-amount">{{totalAmount}}</span>
-    <span class="currency">{{currency}}</span>
-    <span class="taxe">{{taxe}}</span>
+    <span id="smalt-paypal-cc-form-amount" class="total-amount">{{totalAmount}}</span>
+    <span id="smalt-paypal-cc-form-currency" class="currency">{{currency}}</span>
+    <span id="smalt-paypal-cc-form-tax" class="tax">{{tax}}</span>
 </template>
